<resources>
    <string name="app_name" translatable="false">adAstra</string>
    <string name="login">Login</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="password" translatable="false">Password</string>
    <string name="signIn">Sign In</string>
    <string name="txt_or">or</string>
    <string name="google_icon">Google icon</string>
    <string name="missing_account">Don\'t have an account?</string>
    <string name="create">Create</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="signUp">Sign Up</string>

    <string name="username">Name</string>
    <string name="password_repeat">Repeat password</string>

    <string name="encyclopedia">Encyclopedia</string>
    <string name="ISS" translatable="false">ISS</string>
    <string name="home" translatable="false">Home</string>
    <string name="events">Events</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="user_preferences">Preferences</string>
    <string name="dark_theme">Dark mode</string>
    <string name="time_format">12-hour format</string>
    <string name="imperial_system" >Imperial system</string>
    <string name="notification_settings">Notification settings</string>
    <string name="log_out">Log Out</string>

    <string name="invalid_login_data_error">Login failed. Please check your credentials and try again.</string>
    <string name="invalid_email_error_message">Invalid e-mail address</string>
    <string name="invalid_password_error_message">Password must be at least 8 characters long</string>
    <string name="invalid_password_repeat_error_message">Passwords must match</string>
</resources>