<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="?attr/materialCardViewElevatedStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_sx_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_dx_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_hotizontal_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="16dp" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardElevation="16dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_dx_settings"
            app:layout_constraintStart_toStartOf="@+id/guideline_sx_settings"
            app:layout_constraintTop_toTopOf="@+id/guideline_hotizontal_settings">

            <androidx.constraintlayout.widget.ConstraintLayout
                style="?attr/materialCardViewElevatedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/violet">

                <ImageView
                    android:id="@+id/profile_picture"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/alien_svgrepo_com"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@drawable/alien_svgrepo_com" />

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="USERNAME"
                    android:textSize="24dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_picture" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floatingActionButton_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:clickable="true"
                    android:src="@drawable/baseline_create_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/username" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <View
            android:id="@+id/divider_settings"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toStartOf="@+id/guideline_dx_settings"
            app:layout_constraintStart_toStartOf="@+id/guideline_sx_settings"
            app:layout_constraintTop_toBottomOf="@+id/card_settings" />

        <TextView
            android:id="@+id/user_preferences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/user_preferences"
            app:layout_constraintStart_toStartOf="@+id/guideline_sx_settings"
            app:layout_constraintTop_toBottomOf="@+id/divider_settings" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/switch_theme"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/mode_dark_svgrepo_com"
            android:drawablePadding="24dp"
            android:text="@string/dark_theme"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/guideline_sx_settings"
            app:layout_constraintTop_toBottomOf="@+id/user_preferences" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/switch_time_format"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/baseline_access_time_24"
            android:drawablePadding="24dp"
            android:text="@string/time_format"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/switch_theme"
            app:layout_constraintTop_toBottomOf="@+id/switch_theme" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/switch_imperial_system"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/ruler_alt_2_svgrepo_com"
            android:drawablePadding="21dp"
            android:paddingStart="3dp"
            android:text="@string/imperial_system"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/guideline_sx_settings"
            app:layout_constraintTop_toBottomOf="@+id/switch_time_format" />

        <Button
            android:id="@+id/button_notification_settings"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/notification_settings"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/guideline_sx_settings"
            app:layout_constraintTop_toBottomOf="@+id/switch_imperial_system" />

        <Button
            android:id="@+id/button_log_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/log_out"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline_dx_settings"
            app:layout_constraintStart_toStartOf="@+id/guideline_sx_settings" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>