<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.welcome.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.welcome.SignUp">

        <TextView
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/signUp"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="@+id/guideline_sx_sing_up"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_sx_sing_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2_dx_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="16dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameTextLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2_dx_sign_up"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline_sx_sing_up"
            app:layout_constraintTop_toBottomOf="@+id/signUp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="12dp"
                android:hint="@string/username"
                android:padding="24dp"
                android:textColorHint="#546E7A" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2_dx_sign_up"
            app:layout_constraintStart_toStartOf="@+id/guideline_sx_sing_up"
            app:layout_constraintTop_toBottomOf="@+id/usernameTextLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/baseline_alternate_email_24"
                android:drawablePadding="12dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="24dp"
                android:textColorHint="#546E7A"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2_dx_sign_up"
            app:layout_constraintStart_toStartOf="@+id/guideline_sx_sing_up"
            app:layout_constraintTop_toBottomOf="@+id/emailInputLayout"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/baseline_key_24"
                android:drawablePadding="12dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="24dp"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordRepeatInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2_dx_sign_up"
            app:layout_constraintStart_toStartOf="@+id/guideline_sx_sing_up"
            app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textPasswordRepeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/baseline_key_24"
                android:drawablePadding="12dp"
                android:hint="@string/password_repeat"
                android:inputType="text|textPassword"
                android:padding="24dp"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingLeft="32dp"
            android:paddingTop="12dp"
            android:paddingRight="32dp"
            android:paddingBottom="12dp"
            android:text="@string/signUp"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2_dx_sign_up"
            app:layout_constraintStart_toStartOf="@+id/guideline_sx_sing_up"
            app:layout_constraintTop_toBottomOf="@+id/passwordRepeatInputLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>